--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <html>
 <head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://unpkg.com/simple-statistics@7.3.2/dist/simple-statistics.min.js"></script>
 <script src="./chart.js"></script>
 <title>Local COVID Trends</title>
 <body onload="makeChart()">
-<h1>Local COVID Trends</h1>
-<div id="covid-tracking"></div>
-<script>
+
+<div class="container">
+  <div class="row">
+    <h1>Local COVID Trends</h1>
+
+    <p>
+      The thin lines represent daily new cases in each county. The thick lines
+      are the past 7-day average of daily new cases.
+    </p>
+
+    <div id="covid-tracking"></div>
+  </div>
+</div>
+
+<style>
+  h1 {
+      padding: 0.5em 0 0.5em 0;
+      background-color: #eef;
+  }
+</style>
+
 </body>
 </html>
