Replace "county" with "region" in HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Local COVID Trends</h1>
 
     <p>
-      The thin lines represent daily new cases in each county. The thick lines
+      The thin lines represent daily new cases in each region. The thick lines
       are the past 7-day average of daily new cases.
     </p>
 
