Add info on data sources to page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,25 @@
       </p>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-12">
+      <h2>Data Sources</h2>
+
+      <p>
+        Covid case rate data comes from
+        <a href="https://covid-api.com/">covid-api.com</a>, which in turn
+        sources data from
+        the <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins
+        University CSSE</a>.
+      </p>
+
+      <p>
+        Population data comes
+        from <a href="https://worldpopulationreview.com/">World Population
+        Review</a>.
+      </p>
+    </div>
 </div>
 
 <style>
