--- a/index.html
+++ b/index.html
@@ -5,104 +5,16 @@
 <script src="https://unpkg.com/simple-statistics@7.3.2/dist/simple-statistics.min.js"></script>
 <script src="./chart.js"></script>
 <title>Local COVID Trends</title>
-<body onload="makeCharts()">
 
+<body>
 
-<div class="container">
-  <div class="row">
-    <h1>Local COVID Trends</h1>
-  </div>
+<h1>No Longer in Operation</h1>
 
-  <div class="row">
-    <div class="col-12">
-      <h2>Seven day average of new cases per 10,000 population</h2>
-
-      <p>
-        Each line shows the seven day average of new cases per 10,000
-        population for the given region.
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-9">
-      <div id="by-population"></div>
-    </div>
-    <div class="col-3">
-      <div id="by-population-details" class="details">Mouse over or tap the chart for more details.</div>
-      <p class="explanation">
-        This table shows details for the date you selected. It also compares
-        that date's 7-day average case rate with the first date for which we
-        have a 7-day average.
-      </p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <h2>New cases, raw numbers</h2>
-
-      <p>
-        The thin lines represent daily new cases in each region. The thick lines
-        are the past 7-day average of daily new cases.
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-9">
-      <div id="raw"></div>
-    </div>
-    <div class="col-3">
-      <div id="raw-details" class="details">Mouse over or tap the chart for more details.</div>
-      <p class="explanation">
-        This table shows details for the date you selected. It also compares
-        that date's 7-day average case rate with the first date for which we
-        have a 7-day average.
-      </p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <h2>Data Sources</h2>
-
-      <p>
-        Covid case rate data comes from
-        <a href="https://covid-api.com/">covid-api.com</a>, which in turn
-        sources data from
-        the <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins
-        University CSSE</a>.
-      </p>
-
-      <p>
-        Population data comes
-        from <a href="https://worldpopulationreview.com/">World Population
-        Review</a>.
-      </p>
-    </div>
-</div>
-
-<style>
-  h1 {
-      padding: 0.5em 0 0.5em 0;
-      background-color: #eef;
-  }
-  .details h2 {
-      font-size: 140%;
-      font-weight: 900;
-  }
-  .details table th {
-      padding-right: 1em;
-  }
-  .details table td {
-      padding-right: 1em;
-  }
-  .details table td.diff {
-      text-align: right
-  }
-  .explanation {
-      margin-top: 1em;
-  }
-</style>
+<p>
+The data was starting to show nonsense (Hennepin county having nearly as many
+cases as the entire state). I don't have the interest to investigate what's
+going on, so I'm taking the site down.
+</p>
 
 </body>
 </html>
